# my-music-api-haskell

./: .gitignore  LICENSE  my-music-api.cabal  stack.yaml
app/: Main.hs
src/Data/Aeson/: Compatibility.hs
src/Data/JSON/: Convert.hs
src/MyMusic/: Album.hs  Auth.hs  Env.hs  Records.hs
