name:                my-music-api
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bloodhound
                     , CouchDB
                     , http-client
                     , json
                     , network-uri
                     , scotty
                     , template-haskell
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  exposed-modules:     MyMusic.Album
                     , MyMusic.Records
                     , MyMusic.Env
  other-modules:       Data.JSON.Convert
  default-language:    Haskell2010

executable my-music-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-music-api
                     , aeson
                     , CouchDB
                     , http-types
                     , json
                     , network-uri
                     , scotty
                     , template-haskell
                     , text
                     , transformers
                     , wai-extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Dremora/my-music-api
