name:                my-music-api
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Kirill Korolyov
maintainer:          kirill.korolyov@gmail.com
copyright:           2016 Kirill Korolyov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bloodhound
                     , CouchDB
                     , http-client
                     , json
                     , network-uri
                     , scotty
                     , template-haskell
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  exposed-modules:     MyMusic.Album
                     , MyMusic.Records
                     , MyMusic.Env
  other-modules:       Data.Aeson.Compatibility
  default-language:    Haskell2010

executable my-music-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-music-api
                     , aeson
                     , CouchDB
                     , http-types
                     , json
                     , network-uri
                     , scotty
                     , template-haskell
                     , text
                     , transformers
                     , wai-extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Dremora/my-music-api-haskell
